Добавил модули для других компонентов d99 Перенес удаление старых WI в install_pseudo Реализовал зависимости в 'cvslvk build'

--- a/autobuild.conf
+++ b/autobuild.conf
@@ -6,14 +6,21 @@
 # 3 - имя модуля для cvs checkout
 # 4 - тег для cvs checkout
 # 5 - параметры для make create_wi (кроме CL_MODULE=... и CL_OPTIMIZE=1)
-# 6 - комментарий для cvslvk show_ab
+# 6 - метки того, что нужно собрать перед данным (через запятую)
+# 7 - комментарий для cvslvk show_ab
 
 d99-mmt:d99-mmt:mmt:d99::Компилятор mmt для d99
-d99-traceio:d99-traceio_gcc-shared:traceio:d99::Библиотека traceio для d99 (gcc)
-d99-traceio-suncc:d99-traceio_suncc-static:traceio:d99:CL_COMP=suncc:Библиотека traceio для d99 (suncc)
-d99-libmon-mtfloat:d99-libmon_gcc-shared-mtfloat-solthread:mon:d99::Библиотека среды прогона d99 (gcc,solthreads,mtfloat)
-d99-libmon-mtdouble:d99-libmon_gcc-shared-mtdouble-solthread:mon:d99:MT_TYPE=double:Библиотека среды прогона d99 (gcc,solthreads,mtdouble)
-d99-libmon-mtint:d99-libmon_gcc-shared-mtint-solthread:mon:d99:MT_TYPE=int:Библиотека среды прогона d99 (gcc,solthreads,mtint)
-d99-libmon-mtfloat-suncc:d99-libmon_suncc-static-mtfloat-solthread:mon:d99:CL_COMP=suncc:Библиотека среды прогона d99 (suncc,solthreads,mtfloat)
-d99-libmon-mtdouble-suncc:d99-libmon_suncc-static-mtdouble-solthread:mon:d99:MT_TYPE=double CL_COMP=suncc:Библиотека среды прогона d99 (suncc,solthreads,mtdouble)
-d99-libmon-mtint-suncc:d99-libmon_suncc-static-mtint-solthread:mon:d99:MT_TYPE=int CL_COMP=suncc:Библиотека среды прогона d99 (suncc,solthreads,mtint)
+d99-traceio:d99-traceio_gcc-shared:traceio:d99:::Библиотека traceio для d99 (gcc)
+d99-traceio-suncc:d99-traceio_suncc-static:traceio:d99:CL_COMP=suncc::Библиотека traceio для d99 (suncc)
+d99-libmon-mtfloat:d99-libmon_gcc-shared-mtfloat-solthread:mon:d99::d99-traceio:Библиотека среды прогона d99 (gcc,solthreads,mtfloat)
+d99-libmon-mtdouble:d99-libmon_gcc-shared-mtdouble-solthread:mon:d99:MT_TYPE=double:d99-traceio:Библиотека среды прогона d99 (gcc,solthreads,mtdouble)
+d99-libmon-mtint:d99-libmon_gcc-shared-mtint-solthread:mon:d99:MT_TYPE=int:d99-traceio:Библиотека среды прогона d99 (gcc,solthreads,mtint)
+d99-libmon-mtfloat-suncc:d99-libmon_suncc-static-mtfloat-solthread:mon:d99:CL_COMP=suncc:d99-traceio-suncc:Библиотека среды прогона d99 (suncc,solthreads,mtfloat)
+d99-libmon-mtdouble-suncc:d99-libmon_suncc-static-mtdouble-solthread:mon:d99:MT_TYPE=double CL_COMP=suncc:d99-traceio-suncc:Библиотека среды прогона d99 (suncc,solthreads,mtdouble)
+d99-libmon-mtint-suncc:d99-libmon_suncc-static-mtint-solthread:mon:d99:MT_TYPE=int CL_COMP=suncc:d99-traceio-suncc:Библиотека среды прогона d99 (suncc,solthreads,mtint)
+d99-dbgparse:d99-dbgparse_gcc-shared:dbgparse:d99:::Библиотека dbgparse для d99 (gcc)
+d99-tracedb:d99-tracedb_gcc-shared:tracedb:d99::d99-dbgparse:Библиотека tracedb для d99 (gcc)
+d99-reflib:d99-reflib_gcc-shared:reflib:d99:::Библиотека reflib для d99 (gcc)
+d99-wu:d99-wu_gcc-shared:wu:d99::d99-reflib:Библиотека wu для d99 (gcc)
+d99-tracetools:d99-tracetools_gcc:tracetools:d99::d99-tracedb:Программы trindex, stateidx, stread, trcdump для d99
+d99-vis:d99-vis_gcc:vis:d99::d99-tracedb,d99-reflib,d99-wu:Визуализатор трассы для d99
