Опечатка в описании d99-mmt

--- a/autobuild.conf
+++ b/autobuild.conf
@@ -9,7 +9,7 @@
 # 6 - метки того, что нужно собрать перед данным (через запятую)
 # 7 - комментарий для cvslvk show_ab
 
-d99-mmt:d99-mmt:mmt:d99::Компилятор mmt для d99
+d99-mmt:d99-mmt:mmt:d99:::Компилятор mmt для d99
 d99-traceio:d99-traceio_gcc-shared:traceio:d99:::Библиотека traceio для d99 (gcc)
 d99-traceio-suncc:d99-traceio_suncc-static:traceio:d99:CL_COMP=suncc::Библиотека traceio для d99 (suncc)
 d99-libmon-mtfloat:d99-libmon_gcc-shared-mtfloat-solthread:mon:d99::d99-traceio:Библиотека среды прогона d99 (gcc,solthreads,mtfloat)
