d99-tracedb зависит от d99-traceio

--- a/autobuild.conf
+++ b/autobuild.conf
@@ -19,7 +19,7 @@ d99-libmon-mtfloat-suncc:d99-libmon_suncc-static-mtfloat-solthread:mon:d99:CL_CO
 d99-libmon-mtdouble-suncc:d99-libmon_suncc-static-mtdouble-solthread:mon:d99:MT_TYPE=double CL_COMP=suncc:d99-traceio-suncc:Библиотека среды прогона d99 (suncc,solthreads,mtdouble)
 d99-libmon-mtint-suncc:d99-libmon_suncc-static-mtint-solthread:mon:d99:MT_TYPE=int CL_COMP=suncc:d99-traceio-suncc:Библиотека среды прогона d99 (suncc,solthreads,mtint)
 d99-dbgparse:d99-dbgparse_gcc-shared:dbgparse:d99:::Библиотека dbgparse для d99 (gcc)
-d99-tracedb:d99-tracedb_gcc-shared:tracedb:d99::d99-dbgparse:Библиотека tracedb для d99 (gcc)
+d99-tracedb:d99-tracedb_gcc-shared:tracedb:d99::d99-traceio,d99-dbgparse:Библиотека tracedb для d99 (gcc)
 d99-reflib:d99-reflib_gcc-shared:reflib:d99:::Библиотека reflib для d99 (gcc)
 d99-wu:d99-wu_gcc-shared:wu:d99::d99-reflib:Библиотека wu для d99 (gcc)
 d99-tracetools:d99-tracetools_gcc:tracetools:d99::d99-tracedb:Программы trindex, stateidx, stread, trcdump для d99
