1. В Makefile.cvslvk операция копирования скриптов модифицированна        таким образом, чтобы под видом скриптов (вместе сними) можно    было бы копировать директории с данными (правда, они попадут в bin) 2. В cvslvk команда build теперь вместо create_wi использует update_wi 3. autobuild.conf существенно изменен: удалено всякое упоминания о d99    и созданы новые правила (в т.ч. для DyanaIDE)

--- a/Makefile.cvslvk
+++ b/Makefile.cvslvk
@@ -665,7 +665,7 @@ ifdef SCRIPTS
 install_scripts: $(ALWAYS)
 	mkdir -p $(CL_PREFIX)/bin
 	( cd $(CL_PREFIX)/bin && rm -rf $(SCRIPTS) )
-	cp -p $(SCRIPTS) $(CL_PREFIX)/bin/
+	cp -p -r $(SCRIPTS) $(CL_PREFIX)/bin/
 
 override CL_INSTALL_PARTS += install_scripts
 endif
@@ -675,7 +675,7 @@ ifdef CL_INSTALL_WI
 install_scripts_wi: $(ALWAYS)
 	mkdir -p $(CL_PREFIX)/bin
 	( cd $(CL_PREFIX)/bin && rm -rf $(SCRIPTS_WI) )
-	cp -p $(SCRIPTS_WI) $(CL_PREFIX)/bin/
+	cp -p -r $(SCRIPTS_WI) $(CL_PREFIX)/bin/
 
 override CL_INSTALL_PARTS += install_scripts_wi
 endif
