--- a/autobuild.conf
+++ b/autobuild.conf
@@ -1,4 +1,4 @@
-# Список полей:метка:параметры WI(кроме arch-os и btype):модуль CVS:тег:доп. параметры make: комментарий
+# Список полей
 # 1 - метка
 # 2 - имя рабочей инсталляции, без arch-os и btype
 #       (используется для определения имени модуля и ранней проверки - а нет ли
@@ -9,18 +9,28 @@
 # 6 - метки того, что нужно собрать перед данным (через запятую)
 # 7 - комментарий для cvslvk show_ab
 
-d99-mmt:d99-mmt:mmt:d99:::Компилятор mmt для d99
-d99-traceio:d99-traceio_gcc-shared:traceio:d99:::Библиотека traceio для d99 (gcc)
-d99-traceio-suncc:d99-traceio_suncc-static:traceio:d99:CL_COMP=suncc::Библиотека traceio для d99 (suncc)
-d99-libmon-mtfloat:d99-libmon_gcc-shared-mtfloat-solthread:mon:d99::d99-traceio:Библиотека среды прогона d99 (gcc,solthreads,mtfloat)
-d99-libmon-mtdouble:d99-libmon_gcc-shared-mtdouble-solthread:mon:d99:MT_TYPE=double:d99-traceio:Библиотека среды прогона d99 (gcc,solthreads,mtdouble)
-d99-libmon-mtint:d99-libmon_gcc-shared-mtint-solthread:mon:d99:MT_TYPE=int:d99-traceio:Библиотека среды прогона d99 (gcc,solthreads,mtint)
-d99-libmon-mtfloat-suncc:d99-libmon_suncc-static-mtfloat-solthread:mon:d99:CL_COMP=suncc:d99-traceio-suncc:Библиотека среды прогона d99 (suncc,solthreads,mtfloat)
-d99-libmon-mtdouble-suncc:d99-libmon_suncc-static-mtdouble-solthread:mon:d99:MT_TYPE=double CL_COMP=suncc:d99-traceio-suncc:Библиотека среды прогона d99 (suncc,solthreads,mtdouble)
-d99-libmon-mtint-suncc:d99-libmon_suncc-static-mtint-solthread:mon:d99:MT_TYPE=int CL_COMP=suncc:d99-traceio-suncc:Библиотека среды прогона d99 (suncc,solthreads,mtint)
-d99-dbgparse:d99-dbgparse_gcc-shared:dbgparse:d99:::Библиотека dbgparse для d99 (gcc)
-d99-tracedb:d99-tracedb_gcc-shared:tracedb:d99::d99-traceio,d99-dbgparse:Библиотека tracedb для d99 (gcc)
-d99-reflib:d99-reflib_gcc-shared:reflib:d99:::Библиотека reflib для d99 (gcc)
-d99-wu:d99-wu_gcc-shared:wu:d99::d99-reflib:Библиотека wu для d99 (gcc)
-d99-tracetools:d99-tracetools_gcc:tracetools:d99::d99-tracedb:Программы trindex, stateidx, stread, trcdump для d99
-d99-vis:d99-vis_gcc:vis:d99::d99-tracedb,d99-reflib,d99-wu:Визуализатор трассы для d99
+mmt:mmt:mmt::::Компилятор mmt
+traceio:traceio_gcc-shared:traceio::::Библиотека traceio (gcc)
+traceio-suncc:traceio_suncc-static:traceio::CL_COMP=suncc::Библиотека traceio (suncc)
+libmon-mtfloat:libmon_gcc-shared-mtfloat-pthread:mon:::traceio:Библиотека среды прогона (gcc,pthreads,mtfloat)
+libmon-mtdouble:libmon_gcc-shared-mtdouble-pthread:mon::MT_TYPE=double:traceio:Библиотека среды прогона (gcc,pthreads,mtdouble)
+libmon-mtint:libmon_gcc-shared-mtint-pthread:mon::MT_TYPE=int:traceio:Библиотека среды прогона (gcc,pthreads,mtint)
+libmon-mtfloat-suncc:libmon_suncc-static-mtfloat-pthread:mon::CL_COMP=suncc:traceio-suncc:Библиотека среды прогона (suncc,pthreads,mtfloat)
+libmon-mtdouble-suncc:libmon_suncc-static-mtdouble-pthread:mon::MT_TYPE=double CL_COMP=suncc:traceio-suncc:Библиотека среды прогона (suncc,pthreads,mtdouble)
+libmon-mtint-suncc:libmon_suncc-static-mtint-pthread:mon::MT_TYPE=int CL_COMP=suncc:traceio-suncc:Библиотека среды прогона (suncc,pthreads,mtint)
+dbgparse:dbgparse_gcc-shared:dbgparse::::Библиотека dbgparse (gcc)
+tracedb:tracedb_gcc-shared:tracedb:::traceio,dbgparse:Библиотека tracedb (gcc)
+reflib:reflib_gcc-shared:reflib::::Библиотека reflib (gcc)
+wu:wu_gcc-shared:wu:::wx:Библиотека wu (gcc)
+wx:wx_gcc-shared:wx:::reflib:Библиотека wx (gcc)
+tracetools:tracetools_gcc:tracetools:::tracedb:Программы trindex, stateidx, stread, trcdump 
+vis:vis_gcc:vis:::tracetools,wu:Визуализатор трассы 
+pa:pa_gcc:pa:::tracetools,wu:Анализатор производительности 
+gse:gse_gcc:gse:::wu:Графическйи редактор структурных описаний
+DyanaIDE:DyanaIDE:kdyana:::mmt,libmon-mtfloat,gse,vis,pa:IDE для Дианы (с vis, pa, gse)
+# специальные модули (их автоматическая сборка может проходить нестабильно)
+286model:286model:286model::::Модель 286-процессора
+DrGoose:Goose_gcc-shared:DrGoose::::Библиотека распределений случайных чисел goose
+DrEnv:Env_gcc-shared:DrEnv:::DrGoose:Модель датчиков и внешней среды для DrTesy
+DrTesy:Dr:DrTesy:::DrEnv,mmt,libmon-mtdouble,286model:Модель DrTesy (без IDE)
+
