В описание сборки DyanaIDE в autobuild.conf добавлена сборка int и double версий монитора.

--- a/autobuild.conf
+++ b/autobuild.conf
@@ -27,7 +27,7 @@ tracetools:tracetools_gcc:tracetools:::tracedb:Программы trindex, stateidx, stre
 vis:vis_gcc:vis:::tracetools,wu:Визуализатор трассы 
 pa:pa_gcc:pa:::tracetools,wu:Анализатор производительности 
 gse:gse_gcc:gse:::wu:Графическйи редактор структурных описаний
-DyanaIDE:DyanaIDE:kdyana:::mmt,libmon-mtfloat,gse,vis,pa:IDE для Дианы (с vis, pa, gse)
+DyanaIDE:DyanaIDE:kdyana:::mmt,libmon-mtfloat,libmon-mtdouble,libmon-mtint,gse,vis,pa:IDE для Дианы (с vis, pa, gse)
 # специальные модули (их автоматическая сборка может проходить нестабильно)
 286model:286model:286model::::Модель 286-процессора
 DrGoose:Goose_gcc-shared:DrGoose::::Библиотека распределений случайных чисел goose
