Added new modules descriptions.

--- a/autobuild.conf
+++ b/autobuild.conf
@@ -20,6 +20,7 @@ libmon-mtdouble-suncc:libmon_suncc-static-mtdouble-pthread:mon::MT_TYPE=double C
 libmon-mtint-suncc:libmon_suncc-static-mtint-pthread:mon::MT_TYPE=int CL_COMP=suncc:traceio-suncc:Библиотека среды прогона (suncc,pthreads,mtint)
 dbgparse:dbgparse_gcc-shared:dbgparse::::Библиотека dbgparse (gcc)
 tracedb:tracedb_gcc-shared:tracedb:::traceio,dbgparse:Библиотека tracedb (gcc)
+tracedb-module:tracedb-module:tracedb:::traceio,dbgparse:Библиотека tracedb (gcc)
 reflib:reflib_gcc-shared:reflib::::Библиотека reflib (gcc)
 wu:wu_gcc-shared:wu:::wx:Библиотека wu (gcc)
 wx:wx_gcc-shared:wx:::reflib:Библиотека wx (gcc)
@@ -33,4 +34,7 @@ DyanaIDE:DyanaIDE:kdyana:::mmt,libmon-mtfloat,libmon-mtdouble,libmon-mtint,gse,v
 DrGoose:Goose_gcc-shared:DrGoose::::Библиотека распределений случайных чисел goose
 DrEnv:Env_gcc-shared:DrEnv:::DrGoose:Модель датчиков и внешней среды для DrTesy
 DrTesy:Dr:DrTesy:::DrEnv,mmt,libmon-mtdouble,286model:Модель DrTesy (без IDE)
-
+parini:parini:parini:::
+nm_model:nm6403model:nm_model:::Model of the NM processor
+pa-module:pa-module:pa:MODULE::wx,wu,tracedb:Performance Analyzer
+vis-module:vis-module:vis:MODULE::wx,wu,reflib,tracedb-module:Trace visializer
