Added more dependencies.

--- a/autobuild.conf
+++ b/autobuild.conf
@@ -36,5 +36,5 @@ DrEnv:Env_gcc-shared:DrEnv:::DrGoose:Модель датчиков и внешней среды для DrTesy
 DrTesy:Dr:DrTesy:::DrEnv,mmt,libmon-mtdouble,286model:Модель DrTesy (без IDE)
 parini:parini:parini:::
 nm_model:nm6403model:nm_model:::Model of the NM processor
-pa-module:pa-module:pa:MODULE::wx,wu,tracedb:Performance Analyzer
+pa-module:pa-module:pa:MODULE::wx,wu,tracedb,parini:Performance Analyzer
 vis-module:vis-module:vis:MODULE::wx,wu,reflib,tracedb-module:Trace visializer
