Added autobuild entry for qpa.

--- a/autobuild.conf
+++ b/autobuild.conf
@@ -37,4 +37,5 @@ DrTesy:Dr:DrTesy:::DrEnv,mmt,libmon-mtdouble,286model:Модель DrTesy (без IDE)
 parini:parini:parini:::
 nm_model:nm6403model:nm_model:::Model of the NM processor
 pa-module:pa-module:pa:MODULE::wx,wu,tracedb,parini:Performance Analyzer
+qpa-module:qpa-module:pa:QPA::tracedb-module:Performance Analyzer
 vis-module:vis-module:vis:MODULE::wx,wu,reflib,tracedb-module:Trace visializer
