More autobuild updates.

--- a/autobuild.conf
+++ b/autobuild.conf
@@ -13,7 +13,7 @@ mmt:mmt:mmt::::Компилятор mmt
 traceio:traceio_gcc-shared:traceio::::Библиотека traceio (gcc)
 traceio-suncc:traceio_suncc-static:traceio::CL_COMP=suncc::Библиотека traceio (suncc)
 libmon-mtfloat:libmon_gcc-shared-mtfloat-pthread:mon:::traceio:Библиотека среды прогона (gcc,pthreads,mtfloat)
-libmon-mtdouble:libmon_gcc-shared-mtdouble-pthread:mon::MT_TYPE=double:traceio:Библиотека среды прогона (gcc,pthreads,mtdouble)
+libmon-mtdouble:libmon_gcc-shared-mtdouble-pthread:mon:MODULE:MT_TYPE=double:traceio:Библиотека среды прогона (gcc,pthreads,mtdouble)
 libmon-mtint:libmon_gcc-shared-mtint-pthread:mon::MT_TYPE=int:traceio:Библиотека среды прогона (gcc,pthreads,mtint)
 libmon-mtfloat-suncc:libmon_suncc-static-mtfloat-pthread:mon::CL_COMP=suncc:traceio-suncc:Библиотека среды прогона (suncc,pthreads,mtfloat)
 libmon-mtdouble-suncc:libmon_suncc-static-mtdouble-pthread:mon::MT_TYPE=double CL_COMP=suncc:traceio-suncc:Библиотека среды прогона (suncc,pthreads,mtdouble)
@@ -27,6 +27,7 @@ wx:wx_gcc-shared:wx:::reflib:Библиотека wx (gcc)
 tracetools:tracetools_gcc:tracetools:::tracedb:Программы trindex, stateidx, stread, trcdump 
 vis:vis_gcc:vis:::tracetools,wu:Визуализатор трассы 
 pa:pa_gcc:pa:::tracetools,wu:Анализатор производительности 
+qpa-module:qpa-module_gcc:pa:QPA::tracetools:Анализатор производительности 
 gse:gse_gcc:gse:::wu:Графическйи редактор структурных описаний
 DyanaIDE:DyanaIDE:kdyana:::mmt,libmon-mtfloat,libmon-mtdouble,libmon-mtint,gse,vis,pa:IDE для Дианы (с vis, pa, gse)
 # специальные модули (их автоматическая сборка может проходить нестабильно)
@@ -39,3 +40,5 @@ nm_model:nm6403model:nm_model:::Model of the NM processor
 pa-module:pa-module:pa:MODULE::wx,wu,tracedb,parini:Performance Analyzer
 qpa-module:qpa-module:pa:QPA::tracedb-module:Performance Analyzer
 vis-module:vis-module:vis:MODULE::wx,wu,reflib,tracedb-module:Trace visializer
+lib6MCBO:lib6MCBO:6MCBO.Model:LIB::mmt,parini,traceio:6MCBO model library
+
