Added NM gui to autobuild.

--- a/autobuild.conf
+++ b/autobuild.conf
@@ -41,4 +41,4 @@ pa-module:pa-module:pa:MODULE::wx,wu,tracedb,parini:Performance Analyzer
 qpa-module:qpa-module:pa:QPA::tracedb-module:Performance Analyzer
 vis-module:vis-module:vis:MODULE::wx,wu,reflib,tracedb-module:Trace visializer
 lib6MCBO:lib6MCBO:6MCBO.Model:LIB::mmt,parini,traceio:6MCBO model library
-
+nmmgui:nmmgui:nmmgui::::NM model gui
